TODO: split perl documentation and urxvt.pm into separate files
TODO: harmonize --disable-options into position-dependent options.
TODO: after requesting the selection and getting a timeout, no further requests will be sent.
TODO: "slow" rendering mode for bidi and scripts
TODO: read property sequence is broken with respect to utf-8 etc.
TODO: rxvt -name urxvt-girly /// leave pixel droppings
TODO: distributed clipboard example
WISH: anyevent mouse notification / manage MotionMask better.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif. or maybe use perl and an overlay...
WISH: just for fun, do shade and tint with XRender.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

        - don't let iso14755 or mouse reporting get into the way of perl
          (could lead to global grabs never being cleared).
        - experimental OnTheSpot editing support (-pe xim-onthespot).
        - moved Shift-Button2 paste combination to Meta-Button2.
        - the cutchars resource will now be respected and used by the
          selection extension.
        - removed (unused) arabic presentation form composing sequences.
        - be more strict when deciding that a core font glyph is too wide and
          needs the careful rendering mode.
        - allow more leeway for italic fonts when deciding that a character is
          too wide and needs careful mode.
        - redraw even more characters around characters usign careful mode.
        - reduced number of server turnarounds at startup by allocating
          atoms only once per display.
        - changed version sos (ESC [ > c) response to be more compatible with
          xterm.

7.2  Sun Jan 22 21:58:16 CET 2006
        - bugfix: urxvt (not urxvtd) did not correctly handle multiple
          environments necessary, which resulted in segfaults within
          getenv (reproducable: urxvt -fn 9x15, open a menu once,